--- a/index.html
+++ b/index.html
@@ -18,20 +18,22 @@
   <script defer src="/js/main.js"></script>
 </head>
 <body>
-  <div id="left">
-    <div class="logo">
-      <img src="./img/kia_seo.png" alt="logo" class="logo_img">
-    </div>
-    <div class="login">
-      <input type="text" class="id" value="아이디">
-      <input type="text" class="pw" value="비밀번호">
-      <a href="./survice_wait_list/index.html" class="subit_impo">로그인</a>
-    </div>
+  <div id="wrap">
+    <div id="left">
+      <div class="logo">
+        <img src="./img/kia_seo.png" alt="logo" class="logo_img">
+      </div>
+      <div class="login">
+        <input type="text" class="id" value="아이디">
+        <input type="text" class="pw" value="비밀번호">
+        <a href="./survice_wait_list/index.html" class="subit_impo">로그인</a>
+      </div>
 
-  </div>
-  <div id="right">
-    <div class="background">
-      <img src="./img/login_back.png" alt="background">
+    </div>
+    <div id="right">
+      <div class="background">
+        <img src="./img/login_back.png" alt="background">
+      </div>
     </div>
   </div>
 </body>
