--- a/survice_wait_list/index.html
+++ b/survice_wait_list/index.html
@@ -45,34 +45,34 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td>220907051</td><td>58마 5464</td><td>스포티지</td><td>일반</td><td>미션오일</td><td><a href="#" class="">자세히보기</a></td>
+                    <td>220907051</td><td>58마 5464</td><td>스포티지</td><td>일반</td><td>미션오일</td><td><a href="#" class="btn">자세히보기</a></td>
                   </tr>
                   <tr>
-                    <td>220907052</td><td>78사 1453</td><td>레이</td><td>일반</td><td>에어컨필터</td><td><a href="#" class="">자세히보기</a></td>
+                    <td>220907052</td><td>78사 1453</td><td>레이</td><td>일반</td><td>에어컨필터</td><td><a href="#" class="btn">자세히보기</a></td>
                   </tr>
                   <tr>
-                    <td>220907053</td><td>89가 2564</td><td>K9</td><td>일반</td><td>울컥거림(RPM불안정)</td><td><a href="#" class="">자세히보기</a></td>
+                    <td>220907053</td><td>89가 2564</td><td>K9</td><td>일반</td><td>울컥거림(RPM불안정)</td><td><a href="#" class="btn">자세히보기</a></td>
                   </tr>
                   <tr>
-                    <td>220907054</td><td>212바 1445</td><td>모닝</td><td>보증</td><td>경고등 점등</td><td><a href="#" class="">자세히보기</a></td>
+                    <td>220907054</td><td>212바 1445</td><td>모닝</td><td>보증</td><td>경고등 점등</td><td><a href="#" class="btn">자세히보기</a></td>
                   </tr>
                   <tr>
-                    <td>220907055</td><td>37마 1354</td><td>셀토스</td><td>일반</td><td>스위치 작동 불량</td><td><a href="#" class="">자세히보기</a></td>
+                    <td>220907055</td><td>37마 1354</td><td>셀토스</td><td>일반</td><td>스위치 작동 불량</td><td><a href="#" class="btn">자세히보기</a></td>
                   </tr>
                   <tr>
-                    <td>220907056</td><td>95바 4558</td><td>카니발</td><td>보증</td><td>연료필터 </td><td><a href="#" class="">자세히보기</a></td>
+                    <td>220907056</td><td>95바 4558</td><td>카니발</td><td>보증</td><td>연료필터 </td><td><a href="#" class="btn">자세히보기</a></td>
                   </tr>
                   <tr>
-                    <td>220907057</td><td>124바 2115</td><td>니로 플러스</td><td>일반</td><td>시동관련</td><td><a href="#" class="">자세히보기</a></td>
+                    <td>220907057</td><td>124바 2115</td><td>니로 플러스</td><td>일반</td><td>시동관련</td><td><a href="#" class="btn">자세히보기</a></td>
                   </tr>
                   <tr>
-                    <td>220907058</td><td>85가 1152</td><td>레이</td><td>보증</td><td>배터리</td><td><a href="#" class="">자세히보기</a></td>
+                    <td>220907058</td><td>85가 1152</td><td>레이</td><td>보증</td><td>배터리</td><td><a href="#" class="btn">자세히보기</a></td>
                   </tr>
                   <tr>
-                    <td>220907059</td><td>263가 2543</td><td>스포티지</td><td>일반</td><td> 차량쏠림</td><td><a href="#" class="">자세히보기</a></td>
+                    <td>220907059</td><td>263가 2543</td><td>스포티지</td><td>일반</td><td> 차량쏠림</td><td><a href="#" class="btn">자세히보기</a></td>
                   </tr>
                   <tr>
-                    <td>220907060</td><td>55사 0853</td><td>K8</td><td>일반</td><td>제동 관련(abs/이음/떨림)</td><td><a href="#" class="">자세히보기</a></td>
+                    <td>220907060</td><td>55사 0853</td><td>K8</td><td>일반</td><td>제동 관련(abs/이음/떨림)</td><td><a href="#" class="btn">자세히보기</a></td>
                   </tr>
                   
                 </tbody>
