--- a/survice_wait_list/index.html
+++ b/survice_wait_list/index.html
@@ -36,7 +36,7 @@
         <div>
           <ul class="tabMenu">
             <li class="active">
-              <a href="">일반접수</a>
+              <a href="#">일반접수</a>
                 <div class="tabBG nomal">
                   <table>
                     <thead>
@@ -75,6 +75,7 @@
                       <tr>
                         <td>220907060</td><td>55사 0853</td><td>K8</td><td>일반</td><td>제동 관련(abs/이음/떨림)</td><td><a href="#" class="btn">자세히보기</a></td>
                       </tr>
+                     
                       
                     </tbody>
                   </table>
