--- a/survice_wait_list/index.html
+++ b/survice_wait_list/index.html
@@ -14,8 +14,9 @@
 
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
   <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
-  <script defer src="/js/main.js"></script>
+  <script defer src="/js/common.js"></script>
 </head>
 <body>
     <div id="wrap1">
@@ -36,7 +37,7 @@
         <div>
           <ul class="tabMenu">
             <li class="active">
-              <a href="#">일반접수</a>
+              <a href="#" class="n_btn">일반접수</a>
                 <div class="tabBG nomal">
                   <table>
                     <thead>
@@ -82,44 +83,59 @@
                 </div>
             </li>
             <li>
-              <a href="#">예약접수</a>
+              <a href="#" class="r_btn">예약접수</a>
               <div class="tabBG reserve">
                 <table>
                   <thead>
                     <tr>
-                      <th>접수번호</th><th>차량번호</th><th>차종</th><th>구분</th><th>수리내역</th><th><img src="../img/refresh.png" alt="refresh"></th>
+                      <th>예약번호</th><th>차량번호</th><th>차종</th><th>구분</th><th>수리내역</th><th><img src="../img/refresh.png" alt="refresh"></th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
-                      <td>220907051</td><td>58마 5464</td><td>스포티지</td><td>일반</td><td>미션오일</td><td><a href="#" class="btn">자세히보기</a></td>
+                      <td>5220907051</td><td>25마 1464</td><td>스포티지</td><td>일반</td><td>미션오일</td><td><a href="#" class="btn">자세히보기</a></td>
                     </tr>
                     <tr>
-                      <td>220907052</td><td>78사 1453</td><td>레이</td><td>일반</td><td>에어컨필터</td><td><a href="#" class="btn">자세히보기</a></td>
+                      <td>5220907052</td><td>178사 1003</td><td>레이</td><td>일반</td><td>에어컨필터</td><td><a href="#" class="btn">자세히보기</a></td>
                     </tr>
                     <tr>
-                      <td>220907053</td><td>89가 2564</td><td>K9</td><td>일반</td><td>울컥거림(RPM불안정)</td><td><a href="#" class="btn">자세히보기</a></td>
+                      <td>5220907053</td><td>54가 2164</td><td>K9</td><td>일반</td><td>울컥거림(RPM불안정)</td><td><a href="#" class="btn">자세히보기</a></td>
                     </tr>
                     <tr>
-                      <td>220907054</td><td>212바 1445</td><td>모닝</td><td>보증</td><td>경고등 점등</td><td><a href="#" class="btn">자세히보기</a></td>
+                      <td>5220907054</td><td>21바 1045</td><td>모닝</td><td>보증</td><td>경고등 점등</td><td><a href="#" class="btn">자세히보기</a></td>
                     </tr>
                     <tr>
-                      <td>220907055</td><td>37마 1354</td><td>셀토스</td><td>일반</td><td>스위치 작동 불량</td><td><a href="#" class="btn">자세히보기</a></td>
+                      <td>5220907055</td><td>137마 1254</td><td>셀토스</td><td>일반</td><td>스위치 작동 불량</td><td><a href="#" class="btn">자세히보기</a></td>
                     </tr>
                     <tr>
-                      <td>220907056</td><td>95바 4558</td><td>카니발</td><td>보증</td><td>연료필터 </td><td><a href="#" class="btn">자세히보기</a></td>
+                      <td>5220907056</td><td>95바 4559</td><td>카니발</td><td>보증</td><td>연료필터 </td><td><a href="#" class="btn">자세히보기</a></td>
                     </tr>
                     <tr>
-                      <td>220907057</td><td>124바 2115</td><td>니로 플러스</td><td>일반</td><td>시동관련</td><td><a href="#" class="btn">자세히보기</a></td>
+                      <td>5220907057</td><td>14바 2025</td><td>니로 플러스</td><td>일반</td><td>시동관련</td><td><a href="#" class="btn">자세히보기</a></td>
                     </tr>
                     <tr>
-                      <td>220907058</td><td>85가 1152</td><td>레이</td><td>보증</td><td>배터리</td><td><a href="#" class="btn">자세히보기</a></td>
+                      <td>5220907058</td><td>185가 1022</td><td>레이</td><td>보증</td><td>배터리</td><td><a href="#" class="btn">자세히보기</a></td>
                     </tr>
                     <tr>
-                      <td>220907059</td><td>263가 2543</td><td>스포티지</td><td>일반</td><td> 차량쏠림</td><td><a href="#" class="btn">자세히보기</a></td>
+                      <td>5220907059</td><td>23가 2453</td><td>스포티지</td><td>일반</td><td> 차량쏠림</td><td><a href="#" class="btn">자세히보기</a></td>
                     </tr>
                     <tr>
-                      <td>220907060</td><td>55사 0853</td><td>K8</td><td>일반</td><td>제동 관련(abs/이음/떨림)</td><td><a href="#" class="btn">자세히보기</a></td>
+                      <td>5220907060</td><td>45사 0853</td><td>K8</td><td>일반</td><td>제동 관련(abs/이음/떨림)</td><td><a href="#" class="btn">자세히보기</a></td>
+                    </tr>
+                    <tr>
+                      <td>5220907061</td><td>30바 1243</td><td>레이</td><td>일반</td><td>실내소음(도어/유리 등)</td><td><a href="#" class="btn">자세히보기</a></td>
+                    </tr>
+                    <tr>
+                      <td>5220907062</td><td>144바 5073</td><td>카니발</td><td>일반</td><td>경고등 점등</td><td><a href="#" class="btn">자세히보기</a></td>
+                    </tr>
+                    <tr>
+                      <td>5220907063</td><td>54바 8451</td><td>모닝</td><td>일반</td><td>리콜</td><td><a href="#" class="btn">자세히보기</a></td>
+                    </tr>
+                    <tr>
+                      <td>5220907064</td><td>29바 1153</td><td>K9</td><td>일반</td><td>와이퍼</td><td><a href="#" class="btn">자세히보기</a></td>
+                    </tr>
+                    <tr>
+                      <td>5220907065</td><td>84바 5781</td><td>모닝</td><td>보증</td><td>에어컨필터</td><td><a href="#" class="btn">자세히보기</a></td>
                     </tr>
                     
                   </tbody>
