--- a/deatail_info/index.html
+++ b/deatail_info/index.html
@@ -41,35 +41,35 @@
        
         <div class="car_num">
           <div class="i_title">차번</div>
-          <div class="car_num_box">
+          <div class="i_box">
             <input type="text" name="" id="">
           </div>
         </div>
 
         <div class="car_mile">
           <div class="i_title">주행거리</div>
-          <div class="car_mile_box">
+          <div class="i_box">
             <input type="text" name="" id="">
           </div>
         </div>
 
         <div class="car_usernumber">
           <div class="i_title">연락처</div>
-          <div class="car_usernumber_box">
+          <div class="i_box">
             <input type="text" name="" id="">
           </div>
         </div>
 
         <div class="car_type">
           <div class="i_title">차종</div>
-          <div class="car_type_box">
+          <div class="i_box">
             <input type="text" name="" id="">
           </div>
         </div>
         
         <div class="car_username">
           <div class="i_title">고객명</div>
-          <div class="car_username_box">
+          <div class="i_box">
             <input type="text" name="" id="">
           </div>
         </div>
