--- a/deatail_info/index.html
+++ b/deatail_info/index.html
@@ -34,7 +34,9 @@
         </div>
       </header>
       <div class="impo_title">
-        <h1>차량번호</h1>
+        <div class="title">
+          <h1>차량번호</h1>
+        </div>  
       </div>
       
       <div id="car_impo">
