--- a/deatail_info/index.html
+++ b/deatail_info/index.html
@@ -90,31 +90,31 @@
                     <div>
                       <ul class="list1">
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 엔진오일" onclick="getCheckboxValue()" id="engineOil">
+                          <input name="fix" type="checkbox" value="엔진오일" onclick="getCheckboxValue()" id="engineOil">
                           <label for="engineOil">엔진오일</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 미션오일" onclick="getCheckboxValue()" id="missionOil">
+                          <input name="fix" type="checkbox" value="미션오일" onclick="getCheckboxValue()" id="missionOil">
                           <label for="missionOil">미션오일</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 에어컨필터" onclick="getCheckboxValue()" id="airconFilter">
+                          <input name="fix" type="checkbox" value="에어컨필터" onclick="getCheckboxValue()" id="airconFilter">
                           <label for="airconFilter">에어컨필터</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 브레이크 패드" onclick="getCheckboxValue()" id="brakePad">
+                          <input name="fix" type="checkbox" value="브레이크 패드" onclick="getCheckboxValue()" id="brakePad">
                           <label for="brakePad">브레이크 패드</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 부동액" onclick="getCheckboxValue()" id="antifreeze">
+                          <input name="fix" type="checkbox" value="부동액" onclick="getCheckboxValue()" id="antifreeze">
                           <label for="antifreeze">부동액</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 배터리" onclick="getCheckboxValue()" id="battery">
+                          <input name="fix" type="checkbox" value="배터리" onclick="getCheckboxValue()" id="battery">
                           <label for="battery">배터리</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 와이퍼 블레이드" onclick="getCheckboxValue()" id="wiperBlade">
+                          <input name="fix" type="checkbox" value="와이퍼 블레이드" onclick="getCheckboxValue()" id="wiperBlade">
                           <label for="wiperBlade">와이퍼 블레이드</label> 
                         </li>
                       </ul>
@@ -126,39 +126,39 @@
                     <div>
                       <ul class="list2">
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 정기점검(1~8)년차" onclick="getCheckboxValue()" id="PeriodicInspection">
+                          <input name="fix" type="checkbox" value="정기점검(1~8)년차" onclick="getCheckboxValue()" id="PeriodicInspection">
                           <label for="PeriodicInspection">정기점검(1~8)년차</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 경고등 점등" onclick="getCheckboxValue()" id="warningLight">
+                          <input name="fix" type="checkbox" value="경고등 점등" onclick="getCheckboxValue()" id="warningLight">
                           <label for="warningLight">경고등 점등</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 냉난방장치" onclick="getCheckboxValue()" id="airconFilter">
+                          <input name="fix" type="checkbox" value="냉난방장치" onclick="getCheckboxValue()" id="airconFilter">
                           <label for="airconFilter">냉난방장치</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 램프류(전조등 교환 제외)" onclick="getCheckboxValue()" id="airConditioner">
+                          <input name="fix" type="checkbox" value="램프류(전조등 교환 제외)" onclick="getCheckboxValue()" id="airConditioner">
                           <label for="airConditioner">램프류(전조등 교환 제외)</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 개폐불량(도어, 트렁크 등)" onclick="getCheckboxValue()" id="openingAndClosing">
+                          <input name="fix" type="checkbox" value="개폐불량(도어, 트렁크 등)" onclick="getCheckboxValue()" id="openingAndClosing">
                           <label for="openingAndClosing">개폐불량(도어, 트렁크 등)</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 스위치 작동 불량" onclick="getCheckboxValue()" id="switchMalfunction">
+                          <input name="fix" type="checkbox" value="스위치 작동 불량" onclick="getCheckboxValue()" id="switchMalfunction">
                           <label for="switchMalfunction">스위치 작동 불량</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 휠/타이어 핸들 관련(열선 등)" onclick="getCheckboxValue()" id="wheelHandle">
+                          <input name="fix" type="checkbox" value="휠/타이어 핸들 관련(열선 등)" onclick="getCheckboxValue()" id="wheelHandle">
                           <label for="wheelHandle">휠/타이어 핸들 관련(열선 등)</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 실내소음(도어/유리 등)" onclick="getCheckboxValue()" id="indoorNoise">
+                          <input name="fix" type="checkbox" value="실내소음(도어/유리 등)" onclick="getCheckboxValue()" id="indoorNoise">
                           <label for="indoorNoise">실내소음(도어/유리 등))</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 시동관련" onclick="getCheckboxValue()" id="aboutStartUp">
+                          <input name="fix" type="checkbox" value="시동관련" onclick="getCheckboxValue()" id="aboutStartUp">
                           <label for="aboutStartUp">시동관련</label> 
                         </li>
                         <li style="display: flex;">
@@ -175,35 +175,35 @@
                   <div>
                       <ul class="list3">
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 정기점검(1~8)년차" onclick="getCheckboxValue()" id="RPM_instability">
+                          <input name="fix" type="checkbox" value="정기점검(1~8)년차" onclick="getCheckboxValue()" id="RPM_instability">
                           <label for="RPM_instability">울컥거림(RPM불안정)</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 주행/가속 관련" onclick="getCheckboxValue()" id="Driving_AccelerationRelated">
+                          <input name="fix" type="checkbox" value="주행/가속 관련" onclick="getCheckboxValue()" id="Driving_AccelerationRelated">
                           <label for="Driving_AccelerationRelated">주행/가속 관련</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 변속관력(충격 등)" onclick="getCheckboxValue()" id="gearShift">
+                          <input name="fix" type="checkbox" value="변속관력(충격 등)" onclick="getCheckboxValue()" id="gearShift">
                           <label for="gearShift">변속관력(충격 등)</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 차량쏠림" onclick="getCheckboxValue()" id="vehiclePull">
+                          <input name="fix" type="checkbox" value="차량쏠림" onclick="getCheckboxValue()" id="vehiclePull">
                           <label for="vehiclePull">차량쏠림</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 차체 이음" onclick="getCheckboxValue()" id="carBodyJoint">
+                          <input name="fix" type="checkbox" value="차체 이음" onclick="getCheckboxValue()" id="carBodyJoint">
                           <label for="carBodyJoint">차체 이음</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 제동 관련(abs/이음/떨림)" onclick="getCheckboxValue()" id="brakeRelated">
+                          <input name="fix" type="checkbox" value="제동 관련(abs/이음/떨림)" onclick="getCheckboxValue()" id="brakeRelated">
                           <label for="brakeRelated">제동 관련(abs/이음/떨림)</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 연비 관련" onclick="getCheckboxValue()" id="fuelEconomy">
+                          <input name="fix" type="checkbox" value="연비 관련" onclick="getCheckboxValue()" id="fuelEconomy">
                           <label for="fuelEconomy">연비 관련</label> 
                         </li>
                         <li style="display: flex;">
-                          <input name="fix" type="checkbox" value="● 전조등 관련" onclick="getCheckboxValue()" id="headlightRelated">
+                          <input name="fix" type="checkbox" value="전조등 관련" onclick="getCheckboxValue()" id="headlightRelated">
                           <label for="headlightRelated">전조등 관련</label> 
                         </li>
                       </ul>
@@ -213,7 +213,8 @@
             <div class="choice_fix">
               <h1>수리내역</h1>
               <div id="result">
-                
+                <input type="checkbox">
+                <label for="getCheckboxValue"></label>
               </div>
             </div>
             <div class="custom_fix">
